fixed search style on tablet

--- a/src/css/theme/_default.scss
+++ b/src/css/theme/_default.scss
@@ -99,7 +99,7 @@ hr {
 
 
 .fs-search-icon {
-  margin-top: 14px;
+  margin-top: 12px;
   margin-left: 12px;
   font-size: 21px;
 }
